# draw

./: .gitignore  DEPLOY_RENDER_VERCEL.md  Whiteboard_Competitor_Analysis.xlsx  Zenith_Canvas_PRD_v2.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  turbo.json  vercel.json
apps/server/: .env.example  package.json
apps/server/prisma/: schema.prisma
apps/server/prisma/migrations/20260512045628_zenith_canvas/: migration.sql
apps/server/prisma/migrations/20260512122000_auth_otp_drive_dashboard/: migration.sql
apps/server/src/: index.ts
apps/server/src/hocuspocus/: server.ts
apps/server/src/middleware/: rbac.ts
apps/server/src/plugins/: mongo.ts  prisma.ts
apps/server/src/routes/: ai.ts  auth.ts  documents.ts  workspaces.ts
apps/web/: .env.example  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/src/components/: ThreeBackground.tsx
apps/web/src/components/Canvas/: TldrawCanvas.tsx
apps/web/src/hooks/: useAI.ts  useCollaboration.ts  useLocalCanvas.ts
apps/web/src/lib/: googleDrive.ts  socket.ts
apps/web/src/pages/: CanvasPage.css  CanvasPage.tsx  DashboardPage.tsx  HomePage.tsx  LoginPage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
